feat: добавить массовую деактивацию пользователей, добавить статистику, изменить makefile
